# PyQrackIsing

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
PyQrackIsing/: __init__.py  _pyqrack_ising.cpp  generate_tfim_samples.py  kernels.cl  maxcut_tfim.py  spin_glass_solver.py  tfim_magnetization.py  tfim_square_magnetization.py  tsp_symmetric.py
pyqrackising/: __init__.py  _pyqrack_ising.cpp  convert_tensor_network_to_tsp.py  generate_tfim_samples.py  kawasaki_chain_sampler.py  kernels.cl  maxcut_tfim.py  maxcut_tfim_sparse.py  maxcut_tfim_streaming.py  maxcut_tfim_util.py  otoc.py  otocs.py  solve_maxcut_bnb.py  solve_maxcut_bnb_sparse.py  solve_maxcut_bnb_streaming.py  solve_maxcut_exact.py  solve_maxcut_exact_sparse.py  solve_maxcut_exact_streaming.py  spin_glass_solver.py  spin_glass_solver_hybrid.py  spin_glass_solver_sparse.py  spin_glass_solver_streaming.py  spin_glass_solver_util.py  tfim_magnetization.py  tfim_square_magnetization.py  tsp.py  tsp_asymmetric.py  tsp_maxcut.py  tsp_symmetric.py
scripts/: atsp.py  bnb_exact.py  clifford_vqe_entangled.py  clifford_vqe_min.py  clifford_vqe_min_zx.py  clifford_vqe_streaming.py  clifford_vqe_streaming_zx.py  clifford_vqe_u3.py  clifford_vqe_xyz_cnot.py  discrete_tfim_vqe.py  factor_15.py  fc_tn_qiskit_validation.py  fermi_hubbard_ace_depth_series.py  fermi_hubbard_validation.py  generate_tfim_samples.py  halting_heuristic.py  ising_depth_series.py  labs.py  maxcut.py  maxcut_approx.py  maxcut_benchmarks.py  maxcut_exact.py  maxcut_from_tsp_monte_carlo.py  maxcut_multiobjective.py  maxcut_np-complete.py  maxcut_performance_ratio.py  maxcut_random.py  maxcut_random_sparse.py  maxcut_random_sparse_quarter.py  maxcut_random_streaming.py  maxsat_exact.py  otoc_validation.py  qubo_exact.py  rcs_nn_otoc_qiskit_validation.py  rcs_nn_tn_qiskit_validation.py  spin_glass.py  supply_chain.py  tfim_hybrid_validation.py  tfim_model_fit.py  tfim_solver_functions.py  (+14 more)
